--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 		<section class="row" id="projects">
 			<div class="col-md-12" id="projects-container">
 				<div class="row" id="projects-row-1">
-					<div class="col"><img src="img/Project%201.jpg" alt="project 1" width="250px" height="200px"></div>
-					<div class="col"><img src="img/Project%202.jpg" alt="project 2" width="250px" height="200px"></div>
-					<div class="col"><img src="img/Project%203.jpg" alt="project 3" width="250px" height="200px"></div>
+					<div class="col"><a href="https://jrobertconway.github.io/todolist/" target="_blank"><img src="img/Project%201.jpg" alt="project 1" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://jrobertconway.github.io/wikipedia_search/" target="_blank"><img src="img/Project%202.jpg" alt="project 2" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://jrobertconway.github.io/pomodorotimer/pomodoro_clock/" target="_blank"><img src="img/Project%203.jpg" alt="project 3" width="250px" height="200px"></a></div>
 				</div>
 				<div class="row" id="projects-row-2">
-					<div class="col"><img src="img/Project%204.jpg" alt="project 4" width="250px" height="200px"></div>
-					<div class="col"><img src="img/Project%205 .jpg" alt="project 5" width="250px" height="200px"></div>
-					<div class="col"><img src="img/Project%206.jpg" alt="project 6" width="250px" height="200px"></div>
+					<div class="col"><a href="https://jrobertconway.github.io/theband/" target="_blank"><img src="img/Project%204.jpg" alt="project 4" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://jrobertconway.github.io/calculator/javascriptCalc/" target="_blank"><img src="img/Project%207.jpg" alt="project 5" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://jrobertconway.github.io/pizzaplace/" target="_blank"><img src="img/Project%206.jpg" alt="project 6" width="250px" height="200px"></a></div>
 				</div>
 			</div>
 		</section>
