--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 	<div class="container content">
 		<section class="row" id="about">
 			<h3>About</h3>
-			<p>Web developer looking to bring your ideas to life. I have a background in customer service working in retail and the food service industry where I worked as a bartender. Getting to understand peonple needs served me well and as I leaped into web development I can take that knowledge of understnding to help you bring your ideas to the world. What you can learn from me is that I am a learner who doesn't mind figuring things out and getting the solutions you need to build webpages and apps to help connect you to your audience.</p>
+			<p>
+				Let’s build together. I worked in customer service and the food service industry for about ten years, even to this day I enjoy the feeling of making others expectations into reality. Whether you have  an idea for a blog or an app, get intouch with me to bring it to life on the web or app store. My customer service experience plus coding skills in HTML, CSS and JavaScript can push your content to keep guests coming back. As you focus on the other aspects of your creation, I will problem solve the technical issues so your attention can go to what matters. My love for urban culture be it movies, music or fashion, provide me skills that will push your content in front of that audience. Through code I will find the right solutions from design, to content organization, presentation or any other technical assistance you may acquire to keep your guests in constant connection to your creation. I’m willing, ready and able.
+			</p>
 		</section>
 		<section class="row" id="projects">
 			<div class="col-md-12" id="projects-container">
