--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<ul>
 						<li>HTML5</li>
 						<li>CSS3</li>
-						<li>JS ES6</li>
+						<li>JavaScript ES6</li>
 					</ul>
 				</div>
 			</div>
@@ -46,20 +46,25 @@
 		<section class="row" id="about">
 			<h3>About</h3>
 			<p>
-				Let’s build together. I worked in customer service and the food service industry for about ten years, even to this day I enjoy the feeling of making others expectations into reality. Whether you have  an idea for a blog or an app, get intouch with me to bring it to life on the web or app store. My customer service experience plus coding skills in HTML, CSS and JavaScript can push your content to keep guests coming back. As you focus on the other aspects of your creation, I will problem solve the technical issues so your attention can go to what matters. My love for urban culture be it movies, music or fashion, provide me skills that will push your content in front of that audience. Through code I will find the right solutions from design, to content organization, presentation or any other technical assistance you may acquire to keep your guests in constant connection to your creation. I’m willing, ready and able.
+				Thank you for visiting my portfolio and visit again as I will keep updating as I work more projects. 
+				The thing I love about coding is creating an web experience or useful tools that people would enjoy no matter where they are and to do that from a laptop is amazing. 
+				Building anything whether it's coding or putting furniture together from Ikea is fun and satisfying, so I enjoy these challenges. 
+				I’m looking forward towards a career in front end web development and pursuing more skills to help build others dreams through websites or mobile apps. 
+				I also enjoy learning, reading mysteries and watching comedies. 
+				I look forward to from hearing from you, so we can build together.
 			</p>
 		</section>
 		<section class="row" id="projects">
 			<div class="col-md-12" id="projects-container">
 				<div class="row" id="projects-row-1">
-					<div class="col"><a href="https://jrobertconway.github.io/todolist/" target="_blank"><img src="img/Project%201.jpg" alt="project 1" width="250px" height="200px"></a></div>
-					<div class="col"><a href="https://jrobertconway.github.io/wikipedia_search/" target="_blank"><img src="img/Project%202.jpg" alt="project 2" width="250px" height="200px"></a></div>
-					<div class="col"><a href="https://jrobertconway.github.io/pomodorotimer/pomodoro_clock/" target="_blank"><img src="img/Project%203.jpg" alt="project 3" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/todolist" target="_blank"><img src="img/Project%201.jpg" alt="project 1" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/wikipedia_search" target="_blank"><img src="img/Project%202.jpg" alt="project 2" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/pomodorotimer" target="_blank"><img src="img/Project%203.jpg" alt="project 3" width="250px" height="200px"></a></div>
 				</div>
 				<div class="row" id="projects-row-2">
-					<div class="col"><a href="https://jrobertconway.github.io/theband/" target="_blank"><img src="img/Project%204.jpg" alt="project 4" width="250px" height="200px"></a></div>
-					<div class="col"><a href="https://jrobertconway.github.io/calculator/javascriptCalc/" target="_blank"><img src="img/Project%207.jpg" alt="project 5" width="250px" height="200px"></a></div>
-					<div class="col"><a href="https://jrobertconway.github.io/pizzaplace/" target="_blank"><img src="img/Project%206.jpg" alt="project 6" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/theband" target="_blank"><img src="img/Project%204.jpg" alt="project 4" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/calculator" target="_blank"><img src="img/Project%207.jpg" alt="project 5" width="250px" height="200px"></a></div>
+					<div class="col"><a href="https://github.com/jrobertconway/pizzaplace" target="_blank"><img src="img/Project%206.jpg" alt="project 6" width="250px" height="200px"></a></div>
 				</div>
 			</div>
 		</section>
@@ -68,7 +73,7 @@
 				<div class="well well-sm">
 					<form class="form-horizontal" action="https://formspree.io/johnconway095@gmail.com" method="post">
 						<fieldset>
-							<legend class="text-center header">Contact us</legend>
+							<legend class="text-center header">Contact Me</legend>
 
 							<div class="form-group">
 								<span class="col-md-1 col-md-offset-1 text-center"><span class="oi oi-person" title="person" aria-hidden="true"></span></span>
