--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 		<section class="row" id="about">
 			<h3>About</h3>
 			<p>
-				Thank you for visiting my portfolio and visit again as I will keep updating as I work more projects. 
-				The thing I love about coding is creating an web experience or useful tools that people would enjoy no matter where they are and to do that from a laptop is amazing. 
+				Thank you for visiting my portfolio and visit again as I will keep updating as I work on more projects. 
+				The thing I love about coding is creating an web experience or useful apps that people would enjoy no matter where they are and to do that from a laptop is amazing. 
 				Building anything whether it's coding or putting furniture together from Ikea is fun and satisfying, so I enjoy these challenges. 
-				I’m looking forward towards a career in front end web development and pursuing more skills to help build others dreams through websites or mobile apps. 
+				I’m looking forward towards a career in front end web development and pursuing more skills to help others build their dreams through websites or mobile apps. 
 				I also enjoy learning, reading mysteries and watching comedies. 
 				I look forward to from hearing from you, so we can build together.
 			</p>
